--- a/index.html
+++ b/index.html
@@ -171,14 +171,14 @@
     <section class="u-align-center u-clearfix u-gradient u-section-4" id="carousel_c571">
       <div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-text u-text-body-alt-color u-text-1">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
-        <h1 class="u-align-center u-text u-text-default u-text-2">PROMOÇÃO</h1>
+        <h1 class="u-align-center u-text u-text-default u-text-2">VALORES</h1>
         <div class="u-clearfix u-expanded-width u-gutter-16 u-layout-wrap u-layout-wrap-1">
           <div class="u-gutter-0 u-layout">
             <div class="u-layout-row">
               <div class="u-align-center u-container-style u-layout-cell u-palette-1-base u-size-30 u-layout-cell-1">
                 <div class="u-container-layout u-container-layout-1">
                   <h5 class="u-text u-text-body-alt-color u-text-3">PLANO MENSAL</h5>
-                  <h2 class="u-text u-text-body-alt-color u-text-default u-text-4">R$19</h2>
+                  <h2 class="u-text u-text-body-alt-color u-text-default u-text-4">R$29,90</h2>
                   <div class="u-border-2 u-border-white u-line u-line-horizontal u-line-1"></div>
                   <p class="u-align-center u-text u-text-body-alt-color u-text-5"> 1 Tela<br><i></i>+80.000 Conteúdos<br><i></i>Qualidade HD/SD/FullHD/4K/FullHD/4K<br><i></i>Guia de Programação [EPG]<br><i></i>Assista no Smartphone/Tablet<br><i></i>Assista na Smart TV<br><i></i>Assista no Computador<br><i></i>Assista no TV Box/Chromecast<br><i></i>Programação Adultos [Opcional]<br><i></i>Rádios Online<br><i></i>Cortesias: Pacote Filmes e Séries
                   </p>
@@ -188,7 +188,7 @@
               <div class="u-container-style u-layout-cell u-palette-1-base u-size-30 u-layout-cell-2">
                 <div class="u-container-layout u-container-layout-2">
                   <h5 class="u-align-center u-text u-text-body-alt-color u-text-6">PLANO TRIMESTRAL</h5>
-                  <h2 class="u-align-center u-text u-text-body-alt-color u-text-default u-text-7">R$55</h2>
+                  <h2 class="u-align-center u-text u-text-body-alt-color u-text-default u-text-7">R$79,90</h2>
                   <div class="u-border-2 u-border-white u-line u-line-horizontal u-line-2"></div>
                   <p class="u-align-center u-text u-text-body-alt-color u-text-8"> 1 Tela<br><i></i>+80.000 Conteúdos<br><i></i>Qualidade HD/SD/FullHD/4K/FullHD/4K<br><i></i>Guia de Programação [EPG]<br><i></i>Assista no Smartphone/Tablet<br><i></i>Assista na Smart TV<br><i></i>Assista no Computador<br><i></i>Assista no TV Box/Chromecast<br><i></i>Programação Adultos [Opcional]<br><i></i>Rádios Online<br><i></i>Cortesias: Pacote Filmes e Séries
                   </p>
